--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.0.4
+  provider: ^4.0.5
   cupertino_icons: ^0.1.3
+  moor_flutter: ^2.1.1
+  flutter_slidable: ^0.5.4
 
 dev_dependencies:
+  build_runner: ^1.8.1
   flutter_test:
     sdk: flutter
+  moor_generator: ^2.4.0
 
 flutter:
   uses-material-design: true
