--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   moor_flutter: ^2.1.1
   flutter_slidable: ^0.5.4
+  flutter_bloc: ^3.2.0
+  equatable: ^1.1.1
 
 dev_dependencies:
   build_runner: ^1.8.1
